<resources>
    <string name="app_name">Random Number Generator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coin">Coin</string>
    <string name="dice">Dice</string>
    <string name="number">Number</string>
    <string name="quantity">Quantity</string>
    <string name="sides">Sides</string>
    <string name="totalSum">Total Sum</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="generateNum">Generate Numbers</string>
    <string name="tossDice">Toss Dice</string>
    <string name="flipCoin">Flip Coin</string>
    <string name="numbers">Numbers</string>
    <string name="copy">Copy</string>
    <string name="coins">Coins</string>
    <string name="appName">Random Number Generator</string>
    <string name="numTails">Number of Tails</string>
    <string name="numHeads">Number of Heads</string>
</resources>