<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoinFragment">

    <TextView
        android:id="@+id/showCoin_fragmentCoin_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coin_fragmentCoin_textView" />

    <TextView
        android:id="@+id/coinTitle_fragmentCoin_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/coin"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/quantity_coinFragment_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/quantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coinTitle_fragmentCoin_textView" />

    <EditText
        android:id="@+id/quantity_coinFragment_editTextNumber"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/custom_put_text"
        android:ems="10"
        android:inputType="number"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/quantity_coinFragment_textView"
        app:layout_constraintStart_toEndOf="@+id/quantity_coinFragment_textView" />

    <TextView
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:background="@drawable/copy_drawable"
        android:textColor="@color/white"
        android:id="@+id/flipCoin_fragmentCoin_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/flipCoin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantity_coinFragment_editTextNumber" />

    <TextView
        android:id="@+id/coin_fragmentCoin_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/coins"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flipCoin_fragmentCoin_textView" />

    <TextView
        app:drawableEndCompat = "@drawable/ic_copy"
        android:drawablePadding="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:background="@drawable/copy_drawable"
        app:drawableTint="@color/white"
        android:textColor="@color/white"
        android:id="@+id/copy_fragmentCoin_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/copy"
        app:layout_constraintBaseline_toBaselineOf="@+id/coin_fragmentCoin_textView"
        app:layout_constraintStart_toEndOf="@+id/coin_fragmentCoin_textView" />
</androidx.constraintlayout.widget.ConstraintLayout>